--- a/Book/appsettings.json
+++ b/Book/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Book-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=tcp:swrabookdbserver.database.windows.net,1433;Initial Catalog=Book_db;User Id=swra@swrabookdbserver;Password=Hama@swr"
   },
   "Logging": {
     "LogLevel": {
