--- a/Book/Book.csproj
+++ b/Book/Book.csproj
@@ -19,4 +19,8 @@
     <PackageReference Include="VisualStudio.gitignore" Version="1.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\Migrations\" />
+  </ItemGroup>
+
 </Project>
